# sgf-haskell-common

./: .gitignore  package.yaml  sgf-haskell-common.cabal  stack.yaml
src/Sgf/Control/: Applicative.hs  Exception.hs  Lens.hs  Monad.hs
src/Sgf/Data/: List.hs
src/Sgf/System/: Process.hs
