name:                sgf-haskell-common
version:             0.1.0.0
synopsis:            sgf's haskell common modules
description:         sgf's haskell common modules
homepage:            https://github.com/sgf-dma/sgf-haskell-common
license:             BSD3
license-file:        LICENSE
author:              sgf
maintainer:          sgf.dma@gmail.com
copyright:           2016 Author Here
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sgf.Control.Lens
                       Sgf.Data.List
                       Sgf.Control.Exception
  build-depends:       base
                     , mtl
                     , transformers
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

--test-suite sgf-haskell-common-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , sgf-haskell-common
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgf-dma/sgf-haskell-common
